# sonar

./: .gitignore  CMakeLists.txt  README.md  build_android_lib_from_linux.sh  sonar.pro
UnityProject/Assets/: Dark.mat  SonarCameraController.cs  links.txt
UnityProject/Assets/Materials/: InvisiblePlane.mat  ShadowCastShader.shader  UI_CanvasImageMaterial.mat  UI_CanvasImageShader.shader
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Scripts/: SonarCameraController.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
UnityProject/UserSettings/: EditorUserSettings.asset
articles/article1/: article1.md  article1.py  figures.py  ru.md
articles/article2/: figures.py  ru.md
lib/: CMakeLists.txt  lib.pro
lib/include/sonar/: Sonar_c.h  global_types.h  include.pri
lib/include/sonar/CameraTools/: CameraIntrinsics.h  CameraTools.pri  PinholeCameraIntrinsics.h
lib/include/sonar/DebugTools/: DebugTools.pri  debug_tools.h
lib/include/sonar/General/: Image.h  ImageUtils.h  Point2.h
lib/include/sonar/General/impl/: MathUtils_impl.hpp  WLS_impl.hpp
lib/include/sonar/ImageTools/: ImageTools.pri  OpticalFlow.h  OpticalFlowCalculator.h
lib/src/: src.pri
lib/src/CameraTools/: CameraIntrinsics.cpp  CameraTools.pri
lib/src/DebugTools/: DebugTools.pri  debug_tools.cpp
lib/src/ImageTools/: ImageTools.pri  OpticalFlow.cpp  faster_corner_10.cxx
lib/src/sonar/: AbstractTrackingSystem.cpp  AbstractTrackingSystem.h  MarkerFinder.cpp  MarkerFinder.h  MarkerTrackingSystem.cpp  MarkerTrackingSystem.h  Sonar_c.cpp  Sonar_c.h  global_types.h  sonar.cmake  sonar.pri
lib/src/sonar/CameraTools/: CameraIntrinsics.cpp  CameraIntrinsics.h  CameraTools.cmake  CameraTools.pri  PinholeCameraIntrinsics.cpp  PinholeCameraIntrinsics.h
lib/src/sonar/DebugTools/: DebugTools.cmake  DebugTools.pri
lib/src/sonar/General/: General.cmake  General.pri  Image.h  ImagePyramid.h  ImageUtils.h  Logger.cpp  Logger.h  MathUtils.h  Paint.h  Point2.h  WLS.h  macros.h
lib/src/sonar/General/impl/: ImagePyramid_impl.hpp  ImageUtils_impl.hpp  Image_impl.hpp  Paint_impl.hpp  Point2_impl.hpp
lib/src/sonar/ImageTools/: FastCorner.cpp  FastCorner.h  FeatureDetector.cpp  FeatureDetector.h  ImageTools.cmake  ImageTools.pri  OpticalFlowCalculator.cpp
lib/src/sonar/ThreadsTools/: ReadWriteMutex.cpp  ReadWriteMutex.h  Semaphore.cpp  Semaphore.h  SyncFuture.h  ThreadsTools.cmake  ThreadsTools.pri  Worker.cpp  Worker.h  WorkerPool.cpp  WorkerPool.h
prebuilt_libs/android/opencv/native/jni/: OpenCV.mk  OpenCVConfig.cmake
prebuilt_libs/android/opencv/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
prebuilt_libs/windows/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
prebuilt_libs/windows/opencv/x64/lib/: opencv_aruco451.lib  opencv_aruco451d.lib  opencv_calib3d451.lib  opencv_calib3d451d.lib  opencv_ccalib451.lib  opencv_ccalib451d.lib  opencv_core451.lib  opencv_core451d.lib  opencv_features2d451.lib  opencv_features2d451d.lib  opencv_flann451.lib  opencv_flann451d.lib  opencv_highgui451.lib  opencv_highgui451d.lib  opencv_img_hash451.lib  opencv_img_hash451d.lib  opencv_imgcodecs451.lib  opencv_imgcodecs451d.lib  opencv_imgproc451.lib  opencv_imgproc451d.lib  opencv_video451.lib  opencv_video451d.lib  opencv_videoio451.lib  opencv_videoio451d.lib
tests/: main.cpp  test_marker_pose_tracking.cpp  test_marker_pose_tracking.h  test_marker_transform.cpp  test_marker_transform.h  tests.pro
(+2 files in other folders)
